# GUI_Test

./: CMakeLists.txt  GUI_Mingw.qmlproject  MediaViewer.qmlproject  ViewWindow.cpp  ViewWindow.h  filecapture.cpp  filecapture.h  gitignore.txt  qmlmodules  threadmanager.cpp  threadmanager.h  viewframe.cpp  viewframe.h
content/: App.qml  CMakeLists.txt  Screen01.ui.qml  home.qml  showImage.qml  showVideo.qml
imports/: CMakeLists.txt
imports/GUI_Mingw/: CMakeLists.txt  qmldir
imports/GUI_Mingw/designer/: plugin.metainfo
imports/MediaViewer/: CMakeLists.txt  qmldir
imports/MediaViewer/designer/: plugin.metainfo
src/: import_qml_plugins.h  main.cpp
